<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context="com.example.user.weather.activity.SearchPlaceActivity">
    <EditText
        android:inputType="text"
        android:digits="@string/editTextValue"
        android:textColor="@android:color/white"
        android:id="@+id/textLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/searchButton"
        android:id="@+id/searchButton"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons_corner"
        android:textColor="#ffff"/>

    <ListView
        android:id="@+id/list_town"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>
