...
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/minimumTemp"
        app:layout_constraintTop_toBottomOf="@+id/wind"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="152dp"
        android:layout_height="54dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/buttons_corner"
        android:text="@string/nextFiveDays"
        android:textColor="#ffff"
...
